src/app/features/auth/login/login.component.scss
.login-screen {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background: linear-gradient(110.4deg, #EE9B00 8.3%, #AE2012 83.87%);

}



.login-screen__title {
  font-family: Mansalva;
  font-size: 120px;
  font-weight: 400;
  color: #FFFFFF36;
}

.backcolor{
    background-color:#FFFFFF36;
}

.login-screen__description {
  font-weight: 400;
  font-size: 50px;
  letter-spacing: 5rem;
  padding-left: 5rem;
  text-align: center;
  color: #FFFFFF99;
}

.login-screen__content{
    gap: 1rem;
    padding-bottom: 6rem;
}

